# parlant

./: CHANGELOG.md  CLAUDE.md  README.md  llms.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-test.yml  lint.yml
docs/superpowers/plans/: 2026-04-27-agent-scoped-context-variable-values.md
docs/superpowers/specs/: 2026-04-27-agent-scoped-context-variable-values-design.md
examples/: healthcare.py  travel_voice_agent.py
scripts/: generate_client_sdk.py  initialize_repo.py  install_packages.py  lint.py  publish.py  utils.py  version.py
src/parlant/: sdk.py
src/parlant/adapters/db/: json_file.py  mongo_db.py  snowflake_db.py  transient.py
src/parlant/adapters/loggers/: websocket.py
src/parlant/adapters/nlp/: anthropic_service.py  aws_service.py  azure_service.py  cerebras_service.py  common.py  deepseek_service.py  emcie_service.py  fireworks_service.py  gemini_service.py  hugging_face.py  lakera.py  litellm_service.py  mistral_service.py  modelscope_service.py  novita_service.py  ollama_service.py  openai_service.py  openrouter_service.py  parlant_cloud_service.py  qwen_service.py  snowflake_cortex_service.py  together_service.py  vertex_service.py  zhipu_service.py
src/parlant/adapters/tracing/: opentelemetry.py
src/parlant/adapters/vector_db/: chroma.py  mongo.py  qdrant.py  transient.py
src/parlant/api/: agents.py  app.py  authorization.py  canned_responses.py  capabilities.py  common.py  context_variables.py  customers.py  evaluations.py  glossary.py  guidelines.py  health.py  journeys.py  logs.py  relationships.py  services.py  sessions.py  tags.py
src/parlant/api/chat/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
src/parlant/core/: agents.py  application.py  application_context.py  async_utils.py  background_tasks.py  canned_responses.py  capabilities.py  common.py  context_variables.py  customers.py  emissions.py  entity_cq.py  evaluations.py  event_loop_monitor.py  glossary.py  guideline_tool_associations.py  guidelines.py  journey_guideline_projection.py  journeys.py  loggers.py  relationships.py  sessions.py  shots.py  tags.py  tools.py  tracer.py  version.py
src/parlant/core/app_modules/: agents.py  canned_responses.py  customers.py  guidelines.py  journeys.py  relationships.py  sessions.py  tags.py
src/parlant/core/emission/: event_buffer.py  event_publisher.py
src/parlant/core/engines/: types.py
src/parlant/core/engines/alpha/: canned_response_generator.py  engine.py  engine_context.py  entity_context.py  hooks.py  message_event_composer.py  message_generator.py  optimization_policy.py  (+6 more)
src/parlant/core/health/: __init__.py  engine_view.py  event_loop_view.py  nlp_view.py  reporter.py
src/parlant/core/nlp/: embedding.py  generation.py  generation_info.py  moderation.py  policies.py  service.py  tokenization.py
src/parlant/core/persistence/: common.py  document_database.py  document_database_helper.py  vector_database.py  vector_database_helper.py
tests/: __init__.py  conftest.py  test_utilities.py  tool_utilities.py
tests/adapters/db/: test_chroma.py  test_json_file.py  test_mongodb.py  test_snowflake_db.py
tests/adapters/nlp/: test_azure_service.py  test_litellm_service.py  test_openrouter_service.py  test_qwen_service.py  test_zhipu_service.py
tests/adapters/vector_db/: test_mongo_vector.py  test_qdrant.py  test_transient.py
tests/api/: conftest.py  test_agents.py  test_app.py  test_authorization.py  test_canned_responses.py  test_capabilities.py  test_context_variables.py  test_customers.py  test_evaluations.py  test_glossary.py  test_guidelines.py  test_journeys.py  test_relationships.py  test_services.py  test_sessions.py  test_tags.py  test_websocket_logger.py
tests/core/: conftest.py  test_cancellation_suppression_latch.py  test_id_generator.py
tests/core/common/: utils.py
tests/core/stable/: test_application.py  test_capability_vector_store.py  test_entity_cq.py  test_health_reporter.py  test_journey_guideline_projection.py  test_relationships.py
tests/core/stable/nlp/: test_embedding.py  test_generation.py
tests/core/stable/persistence/: test_matches_filters.py
tests/e2e/: conftest.py  test_client_cli_via_api.py  test_server_cli.py  test_utilities.py
tests/modules/: bank.py  mcp_parrot.py  tech_store.py
tests/sdk/: conftest.py  test_agents.py  test_canned_responses.py  test_current_entities.py  test_customers.py  test_dynamic_composition_mode.py  test_glossary.py  test_guidelines.py  test_journeys.py  test_labels.py  test_planners.py  test_retrievers.py  test_sdk_validation.py  test_server.py  test_tools.py  test_variables.py  utils.py
(+104 files in other folders)
